--- a/src/pages/AboutUs/AboutUs.module.css
+++ b/src/pages/AboutUs/AboutUs.module.css
@@ -7,7 +7,6 @@
     .aboutSection {
         display: flex;
         padding-top: 170px;
-        gap: 20px;
         align-items: center;
 
         margin-bottom: 15px;
@@ -15,7 +14,7 @@
 }
 @media only screen and (min-width: 1024px) {
     .aboutSection {
-        padding-top: 150px;
+        padding-top: 165px;
         align-items: flex-start;
         margin-bottom: 0px;
     }
@@ -46,6 +45,7 @@
     .aboutUsImg {
         width: 385px;
         object-fit: contain;
+        margin-right: 26px;
     }
 }
 @media only screen and (min-width: 1024px) {
