--- a/src/pages/News/News.module.css
+++ b/src/pages/News/News.module.css
@@ -81,9 +81,7 @@ margin-bottom: 50px;
     bottom: 570px;
 }
 }
-.subTitle{
 
-}
 .item{
 position: relative;
 box-shadow: 0 0 10px 0 rgba(0, 0, 0, .15);
@@ -136,6 +134,8 @@ box-shadow: 0 0 10px 0 rgba(0, 0, 0, .15);
 @media only screen and (min-width: 1024px) {
     .description {
         margin-bottom: 35px;
+        min-height: 112px;
+        overflow: hidden;
     }
 }
 .link{
@@ -146,6 +146,7 @@ display: flex;
 flex-direction: column;
 justify-content: center;
 max-width: 220px;
+
 margin: 0 auto;
 }
 
@@ -205,6 +206,7 @@ margin: 0 auto;
 .newsWrapper {
 display: flex;
 flex-direction: column;
+margin-bottom: 50px;
 }
 }
 
