--- a/src/pages/Mission/Mission.module.css
+++ b/src/pages/Mission/Mission.module.css
@@ -137,9 +137,7 @@ margin-bottom: 0px;
 }
 @media only screen and (min-width: 1024px) {
     .firstMissionList {
-        /* padding-left: 10px;
-        padding-right: 10px; */
-
+        padding-top: 40px;
         max-width: 520px;
         }
 }
