--- a/src/pages/BatikPage/BatikPage.module.css
+++ b/src/pages/BatikPage/BatikPage.module.css
@@ -5,12 +5,9 @@
     background-position: center;   
 
     margin-top: 30px;
-    padding-top: 31px;
-    padding-left: 19px;
-    padding-right: 19px;
     padding-bottom: 92px;
     margin-bottom: 40px;
-}
+ }
 .batikMainTitle {
     display: none;
 }
@@ -36,27 +33,34 @@
     text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
 
     margin-bottom: 16px;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 .batikSlogan {
+    max-width: 100%;
+    box-sizing: border-box;
     text-align: justify;
     font-size: 16px;
     line-height: 1.4;
     color: #FFFFFF;
     text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+
+    padding-left: 10px;
+    padding-right: 10px;
 }
 .batikCollectionImg {
     margin-bottom: 50px;
 }
-.batikCollectionTitle {
+.batikTitle {
     text-align: center;
     color: #423930;
     font-size: 30px;
     line-height: 1.47;
     font-weight: 400;
 
-    margin-bottom: 23px;
+    margin-bottom: 35px;
 }
-.batikCollectionText {
+.batikDescription {
     font-size: 15px;
     text-align: justify;
     color: #888888;
@@ -82,9 +86,30 @@
     background-color: #FFFFFF;
     color: #000000;
     
-    max-width: 143px;
+    max-width: 250px;
 
     transition: all 0.3s cubic-bezier(0.5, 0.12, 0.46, 0.88);
 
+}
+
+.batikCollectionSection {
     margin-bottom: 73px;
+}
+.batikCollectionSectionWrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.batikGoldSection {
+    margin-bottom: 73px;
+}
+.batikGoldImg {
+margin-bottom: 50px;
+}
+.batikGoldSectionWrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
