--- a/src/pages/Mission/Mission.module.css
+++ b/src/pages/Mission/Mission.module.css
@@ -64,6 +64,11 @@
     font-size: 41px;
 }
 }
+@media only screen and (min-width: 1024px) {
+    .title {
+        text-align: left;
+    }
+}
 @media only screen and (min-width: 1440px) {
 .title {
         font-size: 48px;
@@ -132,18 +137,21 @@
 }
 @media only screen and (min-width: 1024px) {
     .missionlist {
-margin-bottom: 0px;
+    margin-bottom: 0px;
+    column-gap: 75px;
+    row-gap: 50px;
     }
 }
 @media only screen and (min-width: 1024px) {
     .firstMissionList {
         padding-top: 40px;
         max-width: 520px;
+        padding-left: 80px;
         }
 }
 @media only screen and (min-width: 1440px) {
 .firstMissionList {
-    max-width: 900px;
+    max-width: 850px;
 }
 }
 @media only screen and (min-width: 1024px) {
@@ -159,7 +167,7 @@ margin-bottom: 0px;
 }
 @media only screen and (min-width: 1440px) {
 .firstMissionListWrap {
-    background-size: 85%;
+    background-size: 90%;
 }
 }
 @media only screen and (min-width: 1024px) {
@@ -167,8 +175,8 @@ margin-bottom: 0px;
         padding-left: 10px;
         padding-right: 10px;
     
-        max-width: 600px;
-        margin-left: 350px;
+        max-width: 500px;
+        margin-left: 500px;
     }
 }
 @media only screen and (min-width: 1024px) {
