--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -91,7 +91,7 @@
 }
 @media only screen and (min-width: 1440px) {
     .aboutLink {
-        /* padding-top: 150px; */
+        padding-top: 150px;
     }
 }
 .historyBox {
