--- a/src/pages/Mission/Mission.module.css
+++ b/src/pages/Mission/Mission.module.css
@@ -6,6 +6,11 @@
         margin-bottom: 0px;
     }
 }
+@media only screen and (min-width: 1024px) {
+    .missionSection {
+            margin-bottom: 70px;
+        }
+}
 .mainTitle {
     display: none;
 }
@@ -158,7 +163,7 @@
     .firstMissionListWrap {
     background-image: url(../../images/hands.jpg);
     background-repeat: no-repeat;
-    background-size: 130%;
+    background-size: cover;
     background-position: right;
     background-attachment: fixed;
 
@@ -179,9 +184,9 @@
         margin-left: 500px;
     }
 }
-@media only screen and (min-width: 1024px) {
+@media only screen and (min-width: 1440px) {
     .secondMissionList {
-        max-width: none;
+        max-width: 700px;
     }
 }
 @media only screen and (min-width: 1024px) {
@@ -197,6 +202,8 @@
 }
 @media only screen and (min-width: 1440px) {
     .secondMissionListWrap {
-background-size: 40%;
+        padding-top: 50px;
+        padding-bottom: 300px;
+        /* background-size: 40%; */
     }
 }
