--- a/src/pages/Mission/Mission.module.css
+++ b/src/pages/Mission/Mission.module.css
@@ -151,8 +151,13 @@
     .firstMissionList {
         padding-top: 40px;
         max-width: 520px;
-        padding-left: 80px;
+        padding-left: 35px;
         }
+}
+@media only screen and (min-width: 1440px) {
+    .firstMissionList {
+        padding-left: 80px;
+    }
 }
 @media only screen and (min-width: 1440px) {
 .firstMissionList {
