--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -236,7 +236,7 @@ color: #474249;
     .AboutUsAndHistiryWrapper {
         background-image: url(../../images/hands.jpg);
         background-repeat: no-repeat;
-        background-size: 100%;
-        background-attachment: fixed;
+        background-size: cover;
+        padding-bottom: 60px;
     }
 }
