--- a/src/pages/Mission/Mission.module.css
+++ b/src/pages/Mission/Mission.module.css
@@ -168,7 +168,7 @@
     .firstMissionListWrap {
     background-image: url(../../images/hands.jpg);
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 100%;
     background-position: right;
 
     padding-left: 10px;
