--- a/src/pages/AboutUs/AboutUs.module.css
+++ b/src/pages/AboutUs/AboutUs.module.css
@@ -21,6 +21,7 @@
 }
 @media only screen and (min-width: 1440px) {
 .aboutSection {
+    padding-top: 210px;
     justify-content: center;
     align-items: flex-start;
     padding-right: 20px;
@@ -58,6 +59,7 @@
 @media only screen and (min-width: 1440px) {
     .aboutUsImg {
         width: 100%;
+        margin-right: 70px;
     }
 }
 /************** стилі для AboutUsInformation ***********/
