--- a/src/pages/Mission/Mission.module.css
+++ b/src/pages/Mission/Mission.module.css
@@ -60,7 +60,7 @@
     line-height: 1.3;
     letter-spacing: 1.5px;
     color: #423930;
-    text-align: center;
+    text-align: left;
 
     margin-bottom: 20px;
 }
@@ -107,6 +107,7 @@
 @media only screen and (min-width: 768px) {
     .subTitle {
         font-size: 28px;
+        line-height: 1.2;
     }
 }
 .text {
