--- a/src/pages/BatikPage/BatikPage.module.css
+++ b/src/pages/BatikPage/BatikPage.module.css
@@ -166,7 +166,7 @@
     .batikDescription {
             font-size: 21px;
             margin-bottom: 31px;
-            max-width: 650px;
+            max-width: 750px;
         }
 }
 
@@ -220,6 +220,7 @@
     width: 1024px;
     padding-top: 100px;
     padding-bottom: 100px;
+    padding-left: 30px;
     }
 }
 @media only screen and (min-width: 1440px) {
