--- a/src/pages/BatikPage/BatikPage.module.css
+++ b/src/pages/BatikPage/BatikPage.module.css
@@ -218,9 +218,7 @@
     .batikCollectionSectionWrapper {
     align-items: center;
     width: 1024px;
-    padding-top: 100px;
-    padding-bottom: 100px;
-    padding-left: 40px;
+    padding: 100px 40px 100px 40px;
     }
 }
 @media only screen and (min-width: 1440px) {
