--- a/src/pages/History/History.module.css
+++ b/src/pages/History/History.module.css
@@ -12,16 +12,29 @@
     display: none;
 }
 .historyImg {
+    background-image: url(../../images/history/history.jpg);
+    background-color: #2a2a2a;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 45px;
+
     margin-bottom: 15px;
 }
 @media only screen and (min-width: 768px) {
     .historyImg {
         margin-bottom: 25px;
+        height: 115px;
     }
+}
+@media only screen and (min-width: 1024px) {
+    .historyImg {
+           height: 155px;
+        }
 }
 @media only screen and (min-width: 1440px) {
     .historyImg {
-            margin-bottom: 40px;
+        margin-bottom: 40px;
+        height: 224px;
         }
 }
 .title {
