--- a/src/pages/History/History.module.css
+++ b/src/pages/History/History.module.css
@@ -73,6 +73,11 @@
         padding-right: 25px;
     }
 }
+@media only screen and (min-width: 1024px) {
+    .historyTextBox {
+        padding-left: 0;
+    }
+}
 @media only screen and (min-width: 1440px) {
     .historyTextBox {
             padding-left: 40px;
