--- a/src/components/Footer/footer.module.css
+++ b/src/components/Footer/footer.module.css
@@ -248,4 +248,6 @@ margin-bottom: 30px;
 .logoBtn {
     border: none;
     background-color: transparent;
+    padding-left: 0;
+    padding-right: 0;
 }
