--- a/src/pages/History/History.module.css
+++ b/src/pages/History/History.module.css
@@ -76,6 +76,7 @@
 @media only screen and (min-width: 1024px) {
     .historyTextBox {
         padding-left: 10px;
+        padding-right: 0;
     }
 }
 @media only screen and (min-width: 1440px) {
