--- a/src/pages/Mission/Mission.module.css
+++ b/src/pages/Mission/Mission.module.css
@@ -152,7 +152,7 @@
     .firstMissionList {
         padding-top: 40px;
         max-width: 520px;
-        padding-left: 35px;
+        /* padding-left: 35px; */
         }
 }
 @media only screen and (min-width: 1440px) {
