--- a/src/pages/History/History.module.css
+++ b/src/pages/History/History.module.css
@@ -9,6 +9,11 @@
 }
 @media only screen and (min-width: 768px) {
     .historySection {
+        padding-top: 230px;
+    }
+}
+@media only screen and (min-width: 1440px) {
+    .historySection {
         padding-top: 250px;
     }
 }
