футер і хедер однакової ширини

--- a/src/pages/Mission/Mission.module.css
+++ b/src/pages/Mission/Mission.module.css
@@ -163,6 +163,7 @@
 @media only screen and (min-width: 1440px) {
 .firstMissionList {
     max-width: 850px;
+    padding-left: 107px;
 }
 }
 @media only screen and (min-width: 1024px) {
