--- a/src/components/Footer/footer.module.css
+++ b/src/components/Footer/footer.module.css
@@ -66,7 +66,7 @@ margin-bottom: 30px;
 }
 @media only screen and (min-width: 1440px) {
     .footerNavigation {
-        max-width: 814px;
+        max-width: 1200px;
         margin-bottom: 50px;
     }
 }
@@ -87,6 +87,7 @@ margin-bottom: 30px;
     text-decoration: none;
     text-transform: uppercase;
     font-size: 16px;
+    letter-spacing: 2.5px;
     line-height: 1;
     font-weight: 400;
     color: #FFFFFF;
@@ -225,7 +226,7 @@ margin-bottom: 30px;
 }
 @media only screen and (max-width: 1440px) {
 .footerSectionBox {
-    max-width: 1140px;
+    max-width: 1420px;
     margin: 0 auto;
 }
 }
