--- a/src/pages/AboutUs/AboutUs.module.css
+++ b/src/pages/AboutUs/AboutUs.module.css
@@ -21,10 +21,10 @@
 }
 @media only screen and (min-width: 1440px) {
 .aboutSection {
-    padding-top: 210px;
+    padding-top: 190px;
     justify-content: center;
     align-items: flex-start;
-    padding-right: 20px;
+    padding-right: 70px;
 }
 }
 .aboutSectionBGI {
@@ -59,7 +59,7 @@
 @media only screen and (min-width: 1440px) {
     .aboutUsImg {
         width: 100%;
-        margin-right: 70px;
+        /* margin-right: 70px; */
     }
 }
 /************** стилі для AboutUsInformation ***********/
@@ -97,6 +97,7 @@
         max-width: 452px;
     }
 }
+
 @media only screen and (min-width: 1440px) {
     .titleAbout {
         font-size: 48px;
