--- a/src/components/Footer/footer.module.css
+++ b/src/components/Footer/footer.module.css
@@ -30,7 +30,6 @@ justify-content: center;
         justify-content: space-between;
         flex-wrap: wrap;
         margin-bottom: 20px;
-        /* align-items: flex-end; */
     }
 }
 .footerInformation::after{
@@ -61,13 +60,14 @@ margin-bottom: 30px;
 }
 @media only screen and (min-width: 1024px) {
     .footerNavigation {
-        max-width: 100%;
+        max-width: 900px;
     }
 }
 @media only screen and (min-width: 1440px) {
     .footerNavigation {
         max-width: 1200px;
         margin-bottom: 50px;
+        max-width: 100%;
     }
 }
 
@@ -81,6 +81,11 @@ margin-bottom: 30px;
 @media only screen and (min-width: 768px) {
     .footerNavItem {
     column-gap: 40px;
+    }
+}
+@media only screen and (min-width: 1024px) {
+    .footerNavItem {
+        column-gap: 15px;
     }
 }
 .footerNavLink{
