--- a/src/pages/NationalCashback/NationalCashback.module.css
+++ b/src/pages/NationalCashback/NationalCashback.module.css
@@ -43,7 +43,11 @@
         margin-bottom: 50px;
     }
 }
-
+@media only screen and (min-width: 1440px) {
+    .cashbackImg {
+        width: 1120px;
+    }
+}
 .textSvg {
     width: 18px;
 }
@@ -57,6 +61,17 @@
     .cashbackList {
         margin-bottom: 100px;
     }
+}
+@media only screen and (min-width: 1440px) {
+    .cashbackList {
+        width: 1120px;
+    }
+}
+.cashbackArticle {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 @media only screen and (min-width: 1024px) {
     .cashbackArticle {
