--- a/src/pages/OurAchievements/OurAchievements.module.css
+++ b/src/pages/OurAchievements/OurAchievements.module.css
@@ -149,6 +149,12 @@
         flex-shrink: 0;
     }
 }
+.ourAchievementsArticle {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
 @media only screen and (min-width: 768px) {
     .ourAchievementsArticle::after {
         content: "";
