--- a/src/pages/Quality/Quality.module.css
+++ b/src/pages/Quality/Quality.module.css
@@ -12,6 +12,11 @@
         padding-top: 230px;
     }
 }
+@media only screen and (min-width: 1440px) {
+    .qualitySection {
+        padding-top: 250px;
+    }
+}
 .qualityImg {
     background-image: url(../../images/quality/quality.jpg);
     background-color: #2a2a2a;
@@ -33,6 +38,12 @@
         padding: 100px;
     }
 }
+@media only screen and (min-width: 1440px) {
+    .qualityImg {
+        padding: 150px;
+        margin-bottom: 40px;
+    }
+}
 .qualitymainTitle {
     display: none;
 }
@@ -52,6 +63,12 @@
         padding-right: 0;
     }
 }
+@media only screen and (min-width: 1440px) {
+    .qualityList {
+        padding-left: 10px;
+        padding-right: 40px;
+    }
+}
 .qualityListText{
     font-size: 15px;
     line-height: 2;
@@ -62,6 +79,11 @@
     .qualityListText {
         font-size: 18px;
     }
+}
+@media only screen and (min-width: 1440px) {
+    .qualityListText {
+            font-size: 19px;
+        }
 }
 .qualityListItem:not(:last-child) {
     margin-bottom: 15px;
