--- a/src/pages/Brands/brands.module.css
+++ b/src/pages/Brands/brands.module.css
@@ -25,8 +25,18 @@
 .title {
     font-weight: 400;
     color: #474249;
-    font-size: 44px;
+    font-size: 35px;
     text-align: center;
+}
+@media only screen and (min-width: 768px) {
+    .title {
+        font-size: 40px;
+    }
+}
+@media only screen and (min-width: 1440px) {
+    .title {
+            font-size: 48px;
+        }
 }
 @media only screen and (min-width: 768px) {
 .brandsList {
