--- a/src/pages/News/News.module.css
+++ b/src/pages/News/News.module.css
@@ -15,15 +15,21 @@ margin-bottom: 50px;
 }
 .title {
     color: #474249;
-    font-size: 39px;
+    font-size: 35px;
     line-height: 1;
     font-weight: 400;
     text-align: center;
 
     margin-bottom: 20px;
 }
+@media only screen and (min-width: 768px) {
+    .title {
+        font-size: 40px;
+    }
+}
 @media only screen and (min-width: 1024px) {
     .title {
+        font-size: 48px;
         margin-bottom: 50px;
     }
 }
