--- a/src/pages/OurAchievements/OurAchievements.module.css
+++ b/src/pages/OurAchievements/OurAchievements.module.css
@@ -12,18 +12,25 @@
 }  
 
 .ourAchievementsTitle {
-    font-size: 32px;
+    font-size: 33px;
     font-weight: 400;
-    line-height: 1;
+    line-height: 1.2;
     color: #423930;
 
     margin-bottom: 27px;
 }
 @media only screen and (min-width: 768px) {
     .ourAchievementsTitle {
-        font-size: 38px;
+        font-size: 40px;
         text-align: center;
         margin-bottom: 30px;
+
+        text-align: left;
+    }
+}
+@media only screen and (min-width: 1440px) {
+    .ourAchievementsTitle {
+        font-size: 48px;
     }
 }
 .ourAchievementsText {
