--- a/src/pages/NationalCashback/NationalCashback.module.css
+++ b/src/pages/NationalCashback/NationalCashback.module.css
@@ -52,7 +52,7 @@
 }
 @media only screen and (min-width: 1440px) {
     .cashbackImg {
-        width: 1120px;
+        width: 115%;
     }
 }
 .textSvg {
@@ -71,7 +71,7 @@
 }
 @media only screen and (min-width: 1440px) {
     .cashbackList {
-        width: 1120px;
+        /* width: 1120px; */
     }
 }
 .cashbackArticle {
