--- a/src/pages/UsefulToKnow/UsefulToKnow.module.css
+++ b/src/pages/UsefulToKnow/UsefulToKnow.module.css
@@ -3,4 +3,73 @@
 }
 .usefulToKnowSection {
     padding-top: 70px;
+    margin-bottom: 70px;
+}
+.usefulToKnowList {
+    padding-left: 25px;
+    padding-right: 25px;
+    }
+.usefulToKnowItem {
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, .15);
+    padding-bottom: 20px;
+}
+.usefulToKnowItem:not(:last-child) {
+    margin-bottom: 20px;
+}
+.usefulToKnowImageWrapper {
+    position: relative;
+    display: inline-block;
+}
+
+.usefulToKnowImage {
+    position: relative;
+    z-index: 1;
+    width: 100%;
+}
+
+.usefulToKnowImageWrapper::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-image: linear-gradient(0deg, rgba(0, 0, 0, .35), transparent 75%);
+    z-index: 2;
+}
+.usefulToKnowTitle {
+    margin-top: 40px;
+    font-size: 21px;
+    line-height: 1.4;
+    color: #423930;
+
+    margin-bottom: 25px;
+}
+.usefulToKnowText {
+    line-height: 1.5em;
+    font-size: 14px;
+    color: #777;
+
+    margin-bottom: 25px;
+}
+.usefulToKnowlink {
+    text-transform: uppercase;
+    font-size: 12px;
+    font-weight: 700;
+    color: #000000;
+    
+    cursor: pointer;
+}
+.usefulToKnowlink::after {
+    content: '\00BB';
+    font-size: inherit;
+    vertical-align: text-bottom;
+}
+.link {
+    text-decoration: none;
+    margin-bottom: 20px;
+}
+.usefulToKnowTextBox {
+    padding-left: 30px;
+    padding-right: 30px;
 }
