--- a/src/pages/UsefulToKnow/UsefulToKnow.module.css
+++ b/src/pages/UsefulToKnow/UsefulToKnow.module.css
@@ -5,13 +5,34 @@
     padding-top: 70px;
     margin-bottom: 70px;
 }
+@media only screen and (min-width: 768px) {
+    .usefulToKnowSection {
+        padding-top: 190px;
+    }
+}
 .usefulToKnowList {
     padding-left: 25px;
     padding-right: 25px;
     }
+@media only screen and (min-width: 768px) {
+    .usefulToKnowList {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 25px;
+        justify-content: center;
+    }
+}
+
 .usefulToKnowItem {
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, .15);
     padding-bottom: 20px;
+
+    
+}
+@media only screen and (min-width: 768px) {
+    .usefulToKnowItem {
+        width: 329px;
+    }
 }
 .usefulToKnowItem:not(:last-child) {
     margin-bottom: 20px;
@@ -72,4 +93,6 @@
 .usefulToKnowTextBox {
     padding-left: 30px;
     padding-right: 30px;
+
+    
 }
